tdf#99776: Preload a persona category initially

Change-Id: Ib47470fed9251611cce043790cb2c1255495524a
Reviewed-on: https://gerrit.libreoffice.org/61609
Tested-by: Jenkins
Reviewed-by: Muhammet Kara <muhammet.kara@pardus.org.tr>